--- a/Download Notes.html
+++ b/Download Notes.html
@@ -273,7 +273,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 </div>
 
                                 <div class="slick-testimonial-caption">
-                                    <p class="lead">Pray untill something happens </p>
+                                    <p class="lead">Pray until something happens </p>
 
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/woman-wearing-mask-face-closeup-covid-19-green-background.jpe" class="img-fluid custom-circle-image me-3" alt="">
