--- a/DB.html
+++ b/DB.html
@@ -71,12 +71,13 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
                             -->
                             <li class="nav-item">
-                                <a class="nav-link active" href="DMBS/Module 1 Introduction to Databases.pptx">Chapter One</a>
+                                <a class="nav-link active" href="DMBS/Module 1 Introduction to Databases.ppt">Chapter One</a>
                             </li>
-                            <!--
+                            
                             <li class="nav-item">
                                 <a class="nav-link active" href="DMBS/Module 2 Database Models and Modelling.pptx">Chapter Two</a>
                             </li>
+                            <!--
                             <li class="nav-item">
                                 <a class="nav-link active" href="DMBS/Module 3 Data Modelling Relationships.pptx">Chapter Three</a>
                             </li>
