--- a/OS.html
+++ b/OS.html
@@ -75,20 +75,19 @@ https://www.tooplate.com/view/2127-little-fashion
                             <li class="nav-item">
                                 <a class="nav-link active" href="OS Notes/Chapter 3 Memory Management.ppt">Chapter Three</a>
                             </li>
-                            <!--
                             <li class="nav-item">
-                                <a class="nav-link active" href="OS Notes/Chapter">Chapter Four</a>
+                                <a class="nav-link active" href="OS Notes/Chapter 4 Input Output Device Management.pptx">Chapter Four</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="OS Notes/Chapter Two Process Management.pptx">Chapter Five</a>
+                                <a class="nav-link active" href="OS Notes/Chapter 5 Secondary Storage Management.pptx">Chapter Five</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="OS Notes/Chapter Two Process Management.pptx">Chapter Six</a>
+                                <a class="nav-link active" href="OS Notes/Chapter 6 File System Management.pptx">Chapter Six</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="OS Notes/Chapter Two Process Management.pptx">Chapter Seven</a>
+                                <a class="nav-link active" href="OS Notes/Chapter 7 Network Security.pptx">Chapter Seven</a>
                             </li>
-                        -->
+                    
                             
                         </ul>
                     </div>
