--- a/DCom.html
+++ b/DCom.html
@@ -125,6 +125,21 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="col-12">
                             <h2 class="mb-5">Meet other <span>students</span></h2>
                         </div>
+                        <div class="col-lg-4 mb-lg-0 mb-4 col-12">
+                            <div class="team-thumb d-flex align-items-center">
+                                <img src="Web/Lodit.jpg" class="img-fluid custom-circle-image team-image me-4" alt="">
+
+                                <div class="team-info">
+                                    <h5 class="mb-0"> Lodit</h5>
+                                    <strong class="text-muted">Weekend</strong>
+
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#marie">
+                                      <i class="bi-plus-circle-fill"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="col-lg-4 mb-4 col-12">
                             <div class="team-thumb d-flex align-items-center">
