--- a/OS.html
+++ b/OS.html
@@ -79,7 +79,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <a class="nav-link active" href="OS Notes/Chapter 4 Input Output Device Management.pptx">Chapter Four</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="OS Notes/Chapter 5 Secondary Storage Management.pptx">Chapter Five</a>
+                                <a class="nav-link active" href="OS Notes/Chapter 5 Secondary Storage management.pptx">Chapter Five</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="OS Notes/Chapter 6 File System Management.pptx">Chapter Six</a>
